--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,9 @@
-Pick better cargo lines
+Fix AppeaseLocalAuthority
+Fix bus service (don't fail ExtendCrossing)
+Cargo stations in networks
+
+Build town bus station first for LA rating
+Use actual rail costs to estimate connection
+Use station-crossing-crossing-station distance to estimate route length vs. distance
+
+Internal: make tasks possibly optional: failure doesn't fail previous subtasks
