--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,7 @@
-Fix AppeaseLocalAuthority
-Fix bus service (don't fail ExtendCrossing)
 Cargo stations in networks
 
-Build town bus station first for LA rating
-Use actual rail costs to estimate connection
+Make train length dependent on engine power
 Use station-crossing-crossing-station distance to estimate route length vs. distance
-
 Internal: make tasks possibly optional: failure doesn't fail previous subtasks
 
 Inline stations:
